changes in style

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daniel Biniashvili - CV</title>
     <script defer src="script.js"></script>
-    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
     <style>
       body {
+        display: flex;
+        justify-content: center;
         background-color: #f4f1ea;
         font-family: "Garamond", "Times New Roman", serif;
         color: #3b2f2f;
@@ -104,10 +105,7 @@
       <h1>Daniel Biniashvili</h1>
       <div class="intro">
         <div class="img">
-          <img
-            src="https://scontent.ftbs10-1.fna.fbcdn.net/v/t39.30808-6/472890443_1273573627204597_1616287627802398167_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=833d8c&_nc_ohc=t-pY2w-eTcwQ7kNvwHpJ7sV&_nc_oc=AdnJMbJkFZxEpayAb37-Lq_cnPSskyO83tclubKKpL60ICpqUb5yqJIejy9IBD5m8vw&_nc_zt=23&_nc_ht=scontent.ftbs10-1.fna&_nc_gid=8sPR-WT1JMGI8YGwUEnyHw&oh=00_AfEKc14xYnwEX1zwlsW-CQe_NG1roZSeLsH19YGT3zFqtw&oe=68045778"
-            alt="Daniel Biniashvili"
-          />
+          <img src="dani.jpg" alt="Daniel Biniashvili" />
         </div>
         <div class="contact">
           <p>📍 Tbilisi, Georgia</p>
@@ -168,9 +166,5 @@
         <p><strong>Studied in Israel</strong> — IDC Herzliya (2017–2021)</p>
       </div>
     </div>
-
-    <script>
-      console.log("Welcome to Daniel's Medieval CV ✨");
-    </script>
   </body>
 </html>
